--- a/contrib/lua/hooks.lua.in
+++ b/contrib/lua/hooks.lua.in
@@ -1,5 +1,5 @@
 -- Example hooks.lua file, put in ~/.elinks/ as hooks.lua.
--- $Id: hooks.lua.in,v 1.61 2005/03/25 18:29:33 miciah Exp $
+-- $Id: hooks.lua.in,v 1.62 2005/03/25 18:30:03 miciah Exp $
 
 -- TODO: Bookmarks stuff should be completely moved to bm.lua. --pasky
 
@@ -70,10 +70,10 @@ function pre_format_html_hook (url, html)
 end
 
 goto_url_hooks = {n=0}
-function goto_url_hook (url)
+function goto_url_hook (url, current_url)
     table.foreachi(goto_url_hooks,
                    function (i, fn)
-                       local new,stop = fn(url)
+                       local new,stop = fn(url, current_url)
                    
                        url = new
 
