Purge the ftpparse code (part II).

--- a/src/protocol/Makefile.am
+++ b/src/protocol/Makefile.am
@@ -1,5 +1,5 @@
 ## Process this file with automake to produce Makefile.in
-## $Id: Makefile.am,v 1.45 2005/03/27 02:20:34 jonas Exp $
+## $Id: Makefile.am,v 1.46 2005/03/27 14:59:24 jonas Exp $
 
 include $(top_srcdir)/Makefile.base
 
@@ -22,7 +22,7 @@ endif
 
 if CONFIG_FTP
 ftpdir = ftp
-ftpobj = $(ftpdir)/ftp.o $(ftpdir)/ftpparse.o $(ftpdir)/parse.o 
+ftpobj = $(ftpdir)/ftp.o $(ftpdir)/parse.o 
 endif
 
 if CONFIG_GOPHER
