--- a/src/scripting/perl/Makefile.am
+++ b/src/scripting/perl/Makefile.am
@@ -1,5 +1,5 @@
 ## Process this file with automake to produce Makefile.in
-## $Id: Makefile.am,v 1.3 2005/01/13 14:14:51 jonas Exp $
+## $Id: Makefile.am,v 1.4 2005/04/01 09:47:28 zas Exp $
 
 include $(top_srcdir)/Makefile.base
 
@@ -11,4 +11,5 @@ libscriptingperl_a_SOURCES = \
  core.h \
  hooks.c \
  hooks.h \
+ perl.c \
  perl.h
