Fix Guile and Ruby detection, it was a quoting issue. Thanks to Jonas.

--- a/configure.in
+++ b/configure.in
@@ -383,7 +383,7 @@ if test "$enable_guile" = "yes"; then
 	AC_MSG_RESULT(yes);
 	## Based on the GUILE_FLAGS macro.
 
-	AC_PATH_PROG(GUILE_CONFIG, guile-config, "no", "$withval:$PATH")
+	AC_PATH_PROG(GUILE_CONFIG, guile-config, no, $withval:$PATH)
 
 	## First, let's just see if we can find Guile at all.
 	if test "$GUILE_CONFIG" != no; then
