--- a/src/scripting/guile/Makefile.am
+++ b/src/scripting/guile/Makefile.am
@@ -1,5 +1,5 @@
 ## Process this file with automake to produce Makefile.in
-## $Id: Makefile.am,v 1.4 2005/01/13 14:14:50 jonas Exp $
+## $Id: Makefile.am,v 1.5 2005/04/01 17:36:46 zas Exp $
 
 include $(top_srcdir)/Makefile.base
 
@@ -12,5 +12,6 @@ libscriptingguile_a_SOURCES = \
  core.c \
  core.h \
  hooks.c \
- hooks.h
-
+ hooks.h \
+ guile.c \
+ guile.h
