Add the builddir variable, initialised to "`pwd`".
Source $builddir/features.conf after sourcing $srcdir/features.conf.

This allows one to have a specific features.conf file for each build tree
and to change compile-time settings without modifying a file that is tracked
by CVS.

--- a/configure.in
+++ b/configure.in
@@ -9,12 +9,15 @@ AM_CONFIG_HEADER(config.h)
 
 AC_PROG_MAKE_SET
 
+builddir="`pwd`"
+
 dnl ===================================================================
 dnl Load feature configuration file and start logging features.
 dnl ===================================================================
 
-features="$srcdir/features.conf"
-AC_CHECK_FILE("$features", [ . $features ])
+features="features.conf"
+AC_CHECK_FILE("$srcdir/$features", [ . $srcdir/$features ])
+AC_CHECK_FILE("$builddir/$features", [ . $builddir/$features ])
 echo "Feature summary:" > features.log
 
 dnl ===================================================================
