--- a/contrib/lua/hooks.lua.in
+++ b/contrib/lua/hooks.lua.in
@@ -1,5 +1,5 @@
 -- Example hooks.lua file, put in ~/.elinks/ as hooks.lua.
--- $Id: hooks.lua.in,v 1.66 2005/04/13 17:27:20 miciah Exp $
+-- $Id: hooks.lua.in,v 1.67 2005/04/15 14:40:47 miciah Exp $
 
 -- TODO: Bookmarks stuff should be completely moved to bm.lua. --pasky
 
@@ -42,9 +42,9 @@ function read (...)
 end
 
 function do_ (f, err)
-  if not f then print(err); return end
+  if not f then _ALERT(err); return end
   local a,b = pcall(f)
-  if not a then print(b); return nil
+  if not a then _ALERT(b); return nil
   else return b or true
   end
 end
