--- a/configure.in
+++ b/configure.in
@@ -986,6 +986,12 @@ fi
 
 AM_CONDITIONAL(CONFIG_MD5, test "$CONFIG_MD5" = yes)
 
+if test "$CONFIG_CSS" = yes || test "$CONFIG_DOM" = yes;
+then
+	EL_CONFIG(CONFIG_SCANNER, [Built-in scanner])
+fi
+AM_CONDITIONAL(CONFIG_SCANNER, test "$CONFIG_SCANNER" = yes)
+
 AC_ARG_ENABLE(weehoofooboomookerchoo,
               [
     Also check out the features.conf file for more information about features!
