--- a/doc/book/manpages/Makefile.am
+++ b/doc/book/manpages/Makefile.am
@@ -1,11 +1,6 @@
 ## Process this file with automake to produce Makefile.in
-## $Id: Makefile.am,v 1.7 2003/06/24 20:13:03 jonas Exp $
+## $Id: Makefile.am,v 1.8 2005/05/02 12:15:51 jonas Exp $
 
 include $(top_srcdir)/doc/book/Makefile.doc
 
-EXTRA_PROGRAMS = manpages
-manpages_SOURCES = elinks.1.xml elinkskeys.5.xml
-manpages_MANFORMAT = elinks.1 elinks.1.in elinkskeys.5
-manpages_HTMLFORMAT = elinks.1.html elinkskeys.5.html
-
-EXTRA_DIST = $(manpages_SOURCES)
+EXTRA_DIST = elinks.1.xml elinkskeys.5.xml
