Readd the config/ XML files. Forgot they are used by help2doc.

--- a/doc/book/Makefile.am
+++ b/doc/book/Makefile.am
@@ -1,5 +1,5 @@
 ## Process this file with automake to produce Makefile.in
-## $Id: Makefile.am,v 1.14 2005/05/02 12:15:51 jonas Exp $
+## $Id: Makefile.am,v 1.15 2005/05/03 23:48:15 jonas Exp $
 
 SUBDIRS = manpages
 
@@ -7,6 +7,9 @@ EXTRA_DIST = \
  README \
  book.xml \
  bookmarks.xml \
+ config/elinks.conf.xml \
+ config/examples.xml \
+ config/syntax.xml \
  exmode.xml \
  introduction.xml \
  mailcap.xml \
