Add --with-xterm configure option to specify how the X terminal emulater is to be invoked. Useful for package maintainers.

--- a/configure.in
+++ b/configure.in
@@ -269,6 +269,15 @@ if test "$cf_result" = no; then
 fi
 
 dnl ===================================================================
+dnl Checks for packaging specific options.
+dnl ===================================================================
+
+AC_ARG_WITH(xterm, [  --with-xterm            how to invoke the X terminal emulator],
+            [ if test "$withval" != no; then
+		AC_DEFINE_UNQUOTED(XTERM, "$withval", [How to invoke XTerm])
+	      fi ])
+
+dnl ===================================================================
 dnl Checks for a libraries, optional even if installed.
 dnl ===================================================================
 
