Add a check for Lua and warn the user that Lua 4 support is deprecated.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,5 @@
 ## Process this file with automake to produce Makefile.in
-## $Id: Makefile.am,v 1.46 2005/01/18 22:25:34 jonas Exp $
+## $Id: Makefile.am,v 1.47 2005/05/13 21:41:53 rrowan Exp $
 
 SUBDIRS = Unicode config contrib debian doc intl po src test
 
@@ -18,6 +18,12 @@ install-exec-hook:
 	@echo "want to check out INSTALL for some hints; ie. you may want to"
 	@echo "make symlink 'links' pointing to 'elinks'."
 	@echo "**************************************************************"
+	@if cat features.log | grep 'Lua' > /dev/null; then \
+		echo "**************************************************************"; \
+		echo "Lua 4 support in ELinks is obsolete.  If you are upgrading"; \
+		echo "from ELinks <= 0.10.X, you must update $(CONFDIR)/hooks.lua."; \
+		echo "**************************************************************"; \
+	fi
 
 
 CLEANFILES = $(srcdir)/features.log
