--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,5 @@
 ## Process this file with automake to produce Makefile.in
-## $Id: Makefile.am,v 1.48 2005/05/13 21:42:35 rrowan Exp $
+## $Id: Makefile.am,v 1.49 2005/05/13 21:45:27 rrowan Exp $
 
 SUBDIRS = Unicode config contrib debian doc intl po src test
 
@@ -13,7 +13,7 @@ EXTRA_DIST = \
  features.conf
 
 install-exec-hook:
-	@if cat features.log | grep 'Lua' > /dev/null; then \
+	@if grep 'Lua' features.log > /dev/null; then \
 		echo "**************************************************************"; \
 		echo "Lua 4 support in ELinks is obsolete.  If you are upgrading"; \
 		echo "from ELinks <= 0.10.X, you must update $(CONFDIR)/hooks.lua."; \
