--- a/configure.in
+++ b/configure.in
@@ -124,6 +124,7 @@ AC_C_CONST
 AC_C_INLINE
 EL_CHECK_CODE(typeof, HAVE_TYPEOF, [], [int a; typeof(a) b;])
 
+AC_SYS_LARGEFILE
 AC_TYPE_SIZE_T
 AC_TYPE_OFF_T
 AC_CHECK_TYPE(ssize_t, int)
