--- a/doc/book/manpages/Makefile.am
+++ b/doc/book/manpages/Makefile.am
@@ -1,4 +1,4 @@
 ## Process this file with automake to produce Makefile.in
-## $Id: Makefile.am,v 1.9 2005/05/02 12:32:44 jonas Exp $
+## $Id: Makefile.am,v 1.10 2005/05/14 16:04:32 jonas Exp $
 
-EXTRA_DIST = elinks.1.xml elinkskeys.5.xml
+EXTRA_DIST = elinkskeys.5.xml
